added open graph meta tags for social media preview cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Primary Meta Tags for SEO -->
+  <meta name="title" content="Prime State - Find Your Dream Property" />
+  <meta name="description"
+    content="Discover your perfect home with Prime State. Browse luxury apartments, houses, and commercial properties with our easy-to-use real estate platform." />
+  <meta name="keywords"
+    content="real estate, property, apartments, houses, luxury homes, buy property, rent property" />
+  <meta name="author" content="Prime State" />
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://prime-state.vercel.app" />
+  <meta property="og:title" content="Prime State - Find Your Dream Property" />
+  <meta property="og:description"
+    content="Discover your perfect home with Prime State. Browse luxury apartments, houses, and commercial properties with our easy-to-use real estate platform." />
+  <meta property="og:image" content="/favicon.png" />
+  <meta property="og:site_name" content="Prime State" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://prime-state.vercel.app" />
+  <meta name="twitter:title" content="Prime State - Find Your Dream Property" />
+  <meta name="twitter:description"
+    content="Discover your perfect home with Prime State. Browse luxury apartments, houses, and commercial properties with our easy-to-use real estate platform." />
+  <meta name="twitter:image" content="/favicon.png" />
+
   <!-- Content Security Policy for enhanced security -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
